--- a/blocks/form/form_variables.less
+++ b/blocks/form/form_variables.less
@@ -53,7 +53,7 @@
     padding: @spacing-07 @spacing-08 @spacing-05 @spacing-08;
     margin-bottom: @spacing-06;
     border-radius: 10px;
-    background-color: @dotcoza-color-neutrals-grey-background;
+    background-color: @test17;
     box-shadow: 0 25px 20px -15px rgb(0 0 0 / 10%);
     align-self: flex-start;
   }
